<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar" >

         <Button
            android:id="@+id/vender_list_cancel" 
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
           
            android:background="@drawable/title_btn_back"
            android:onClick="onCancelVenderList"
           	android:text="@string/back"
            android:textColor="#fff"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/vender_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/vender_list_title"
            android:textColor="#ffffff"
            android:textSize="20sp"
             />
         <ProgressBar
             
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  style="?android:attr/progressBarStyleSmall"
			  android:layout_gravity="center"
			  android:id="@+id/vender_list_progressBar"
		 	  android:layout_toLeftOf="@+id/button_refresh"
		 	  android:layout_marginRight="8dp"
		 	  android:layout_centerVertical="true"
			  />
	     <Button 
	       		android:id="@+id/button_refresh" 
			    android:layout_width="80dp" 
        		android:layout_height="wrap_content"
        		android:layout_alignParentRight="true" 
        		android:layout_centerVertical="true"
        		android:layout_marginRight="5dp"
        		
        		android:textColor="#fff"
        		android:textSize="15sp"
				android:text="@string/add_vender"
           
            	android:background="@drawable/title_btn_right"
				android:onClick="onAddVender"
			    /> 
   
    </RelativeLayout>
    
    <ListView
        android:id="@+id/vender_list_listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:focusable="false"
		android:focusableInTouchMode="false"
		android:fadingEdge="none"
        android:listSelector="@android:color/transparent"
        android:layout_marginTop="1dp"
        android:cacheColorHint="#eef"
        android:dividerHeight="2dp"
        android:divider="#eef">
    </ListView>

   
</LinearLayout>