<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	   
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:background="@null"
	     android:orientation="horizontal"
	     
	     android:baselineAligned="false"
	     android:gravity="bottom"
       >
<LinearLayout
    	android:layout_width="fill_parent"
	     android:layout_height="40dp"
	     android:background="@drawable/statusdetail_comment_top_background"
	     android:orientation="horizontal"
	   
	     android:baselineAligned="false"
	     android:gravity="bottom"
	     >
    
       <RelativeLayout
           
		     android:layout_width="wrap_content"
		     android:layout_height="fill_parent"
		     android:layout_marginLeft="15dp"
		  	 
      		 >
			    <TextView
					android:id="@+id/vender_detail_nav_bad_comment"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:clickable="true"
					android:onClick="onSelectBadList"
					android:layout_centerVertical="true"
					android:layout_centerHorizontal="true"
					android:text="@string/bad_comment"
					android:textSize="16sp"
					android:textColor="#222"/>
			     <ImageView
		         	    
	         	    android:id="@+id/vender_detail_nav_bad_comment_nav_f"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerHorizontal="true"
	                android:layout_alignParentBottom="true"
	                android:src="@drawable/statusdetail_comment_top_arrow"
	                android:contentDescription="@string/image_content"
	                    />
		</RelativeLayout>

	<RelativeLayout
       
		     android:layout_width="wrap_content"
		     android:layout_height="fill_parent"
		     android:layout_marginLeft="30dp"
		  	 
      		 >
			    <TextView
					android:id="@+id/vender_detail_nav_good_comment"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:clickable="true"
					android:onClick="onSelectGoodList"
					android:layout_centerVertical="true"
					android:layout_centerHorizontal="true"
					android:text="@string/good_comment"
				
					android:textSize="16sp"
					android:textColor="#222"/>
			     <ImageView
		         	    
	         	    android:id="@+id/vender_detail_nav_good_comment_nav_f"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerHorizontal="true"
	                android:layout_alignParentBottom="true"
	                android:src="@drawable/statusdetail_comment_top_arrow"
	                android:contentDescription="@string/image_content"
	                    />
		</RelativeLayout>
</LinearLayout>
 </LinearLayout>  
